# mc-launcher

./: .gitignore  CMakeLists.txt  Cargo.toml  DEVELOPMENT_STATUS.md  README.md  run-dev.sh  source-snapshot.txt
crates/launcher-core/: Cargo.toml  Cargo.toml.bak-auth-browser-fix  Cargo.toml.bak-avatar-hmcl  Cargo.toml.bak-game-download-center
crates/launcher-core/src/: auth.rs  auth.rs.bak-account-switch  auth.rs.bak-fix-yggdrasil-client-token  auth.rs.bak-hmcl-account-yggdrasil  auth.rs.bak-hmcl-user-properties  auth.rs.bak-partial-move  auth.rs.bak-warnings  auth.rs.bak-yggdrasil-url-fix  avatar.rs  game_download.rs  game_download.rs.bak-hmcl-download-provider-real  game_download.rs.bak-network-timeout  game_download.rs.bak-track-created-files  instance_manager.rs  java.rs  java_download.rs  launch.rs  launch.rs.bak-hmcl-authlib-injector  lib.rs  lib.rs.bak-account-switch  lib.rs.bak-auth  lib.rs.bak-auth-browser-fix  lib.rs.bak-avatar-hmcl  lib.rs.bak-download-manager  lib.rs.bak-game-download-center  lib.rs.bak-hmcl-account-yggdrasil  lib.rs.bak-hmcl-task-system  lib.rs.bak-java-download  lib.rs.bak-launch-system  version_manager.rs
crates/launcher-qt/: .qmlls.ini  Cargo.toml  Cargo.toml.bak-serde-json  Cargo.toml.bak-serde-json-fix  build.rs  build.rs.bak-auth  build.rs.bak-components  build.rs.bak-download-center  build.rs.bak-java-download  build.rs.bak-theme  build.rs.bak-version-page
crates/launcher-qt/qml/: RootShell.qml  RootShell.qml.bak-auth  RootShell.qml.bak-close-launch-dialog-and-hmcl-settings  RootShell.qml.bak-download-center  RootShell.qml.bak-fix-settings-loader-style  RootShell.qml.bak-hmcl-launch-task-ui  RootShell.qml.bak-hmcl-selected-account-restore  RootShell.qml.bak-hmcl-settings-root-full  RootShell.qml.bak-java-download  RootShell.qml.bak-launch-progress-visibility  RootShell.qml.bak-scale-settings-launch-home-only  RootShell.qml.bak-settings-fullpage-back  RootShell.qml.bak-settings-loader-lazy  RootShell.qml.bak-settings-persist  RootShell.qml.bak-version-launch  RootShell.qml.bak.decorator  RootShell.qml.bak.stageA  Style.qml  Style.qml.bak-fix-settings-qcolor  main.qml  main.qml.bak-broken  main.qml.bak-components  main.qml.bak2
crates/launcher-qt/src/: backend.rs  backend.rs.bak-account-switch  backend.rs.bak-async-catalog-loading  backend.rs.bak-auth  backend.rs.bak-avatar-hmcl  backend.rs.bak-avatar-source-fix  backend.rs.bak-cancel-state-fix  backend.rs.bak-clean-unused-launch-status-warning  backend.rs.bak-download-center  backend.rs.bak-download-manager-backend  backend.rs.bak-download-thread-progress  backend.rs.bak-fix-launch-method-placement  backend.rs.bak-fix-launch-progress-f64  backend.rs.bak-fix-stale-cancelling-task  backend.rs.bak-hmcl-account-yggdrasil  backend.rs.bak-hmcl-download-settings-real  backend.rs.bak-hmcl-launch-task-ui  backend.rs.bak-hmcl-settings-backend-full  backend.rs.bak-hmcl-task-system  backend.rs.bak-launch-progress-visibility  backend.rs.bak-output-poll-fix-again  backend.rs.bak-qproperty-name-fix  backend.rs.bak-remove-old-download-status-writer  backend.rs.bak-version-launch-backend  backend.rs.bak.stageB  backend_account.rs  backend_account.rs.bak.stageC  backend_download.rs  (+11 more)
(+542 files in other folders)
