[package]
name = "launcher-core"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
flate2 = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
tar = "0.4"
uuid = { version = "1", features = ["v4", "v5", "serde"] }

image = { version = "0.25", default-features = false, features = ["png"] }
md5 = "0.7"

zip = { version = "2", default-features = false, features = ["deflate"] }
