[package]
name = "launcher-qt"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
launcher-core = { path = "../launcher-core" }
launcher-app = { path = "../launcher-app" }
cxx = "1.0"
cxx-qt = "0.8.1"
cxx-qt-lib = { version = "0.8.1", features = ["qt_full"] }

[build-dependencies]
cxx-qt-build = { version = "0.8.1", features = ["link_qt_object_files"] }
